@@ -256,5 +256,13 @@ commands:
         description: Removes logs and trade data so developers do not have to work with real customer data
         tables: @trade @stripped
 
+      - id: ee_changelog
+        description: Changelog tables of new indexer since EE 1.13
+        tables: "*_cl"
+
+      - id: idx
+        description: Tables with _idx suffix
+        tables: "*_idx"
+
   N98\Magento\Command\Customer\ListCommand:
     limit: 1000
