@@ -37,7 +37,7 @@ class Application extends BaseApplication
     /**
      * @var string
      */
-    const APP_VERSION = '1.79.1';
+    const APP_VERSION = '1.80.0';
 
     /**
      * @var string
