@@ -7,6 +7,8 @@ RECENT CHANGES
 ======
 
 * Support for modules inside the vendor folder if app is not in phar mode
+* db:dump - Added two new table group for strip option (idx, ee_changelog)
+* Fixed problem with installer and target path "."
 
 ======
 1.79.0
